make headings smaller on mobile, fixed content

--- a/src/components/content.module.scss
+++ b/src/components/content.module.scss
@@ -13,7 +13,23 @@
 
 @media (max-width: var.$mobile-breakpoint) {
   .mdContent {
-    padding: 50px 5vh 20px 5vh;
+    padding: 25px 5vh 20px 5vh;
+  }
+
+  h1 {
+    font-size: 1.5em;
+  }
+
+  h2 {
+    font-size: 1.17em;
+  }
+
+  h3 {
+    font-size: 1em;
+  }
+
+  h4 {
+    font-size: 0.8em;
   }
 }
 
